<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.tensorflow</groupId>
    <artifactId>spark-tensorflow-connector</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>spark-tf-core</module>
    </modules>

    <repositories>
        <repository>
        <id>central1</id>
        <url>http://central1.maven.org/maven2</url>
        <releases>
            <enabled>true</enabled>
        </releases>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
        </repository>

        <repository>
            <id>tap</id>
            <url>https://tap.jfrog.io/tap/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>tap-snapshots</id>
            <url>https://tap.jfrog.io/tap/public-snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>compile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>!NEVERSETME</name>
                </property>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <!--START DO NOT TOUCH-->
                        <plugin>
                            <inherited>true</inherited>
                            <groupId>net.alchim31.maven</groupId>
                            <artifactId>scala-maven-plugin</artifactId>
                            <version>3.1.6</version>
                            <executions>
                                <execution>
                                    <id>compile</id>
                                    <goals>
                                        <goal>add-source</goal>
                                        <goal>compile</goal>
                                    </goals>
                                    <configuration>
                                        <jvmArgs>
                                            <jvmArg>-Xms256m</jvmArg>
                                            <jvmArg>-Xmx512m</jvmArg>
                                        </jvmArgs>
                                        <args>
                                            <arg>-g:vars</arg>
                                            <arg>-deprecation</arg>
                                            <arg>-feature</arg>
                                            <arg>-unchecked</arg>
                                            <arg>-Xfatal-warnings</arg>
                                            <arg>-language:implicitConversions</arg>
                                            <arg>-language:existentials</arg>
                                        </args>
                                    </configuration>
                                </execution>
                                <execution>
                                    <id>test</id>
                                    <goals>
                                        <goal>add-source</goal>
                                        <goal>testCompile</goal>
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <recompileMode>incremental</recompileMode>
                                <useZincServer>true</useZincServer>
                                <scalaVersion>2.10.4</scalaVersion>
                                <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
                            </configuration>
                        </plugin>

                        <!--END DO NOT TOUCH-->
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>properties-maven-plugin</artifactId>
                            <version>1.0.0</version>
                            <executions>
                                <execution>
                                    <phase>generate-resources</phase>
                                    <goals>
                                        <goal>write-project-properties</goal>
                                    </goals>
                                    <configuration>
                                        <outputFile>${project.build.outputDirectory}/maven.properties</outputFile>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>net.alchim31.maven</groupId>
                        <artifactId>scala-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>test</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>!NEVERSETME</name>
                </property>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <!--START DO NOT TOUCH-->
                        <plugin>
                            <inherited>true</inherited>
                            <groupId>net.alchim31.maven</groupId>
                            <artifactId>scala-maven-plugin</artifactId>
                            <version>3.2.2</version>
                            <executions>
                                <execution>
                                    <id>compile</id>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <inherited>true</inherited>
                            <groupId>org.scalatest</groupId>
                            <artifactId>scalatest-maven-plugin</artifactId>
                            <version>1.0</version>
                            <configuration>
                                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                                <junitxml>.</junitxml>
                                <filereports>WDF TestSuite.txt</filereports>
                                <parallel>false</parallel>
                                <stdout>FTD</stdout>
                                <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxDirectMemorySize=1000m</argLine>
                            </configuration>
                            <executions>
                                <execution>
                                    <id>scalaTest</id>
                                    <phase>test</phase>
                                    <goals>
                                        <goal>test</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                        <!--END DO NOT TOUCH-->
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-install-plugin</artifactId>
                            <version>2.5.2</version>
                            <inherited>false</inherited>
                            <executions>
                                <!--<execution>-->
                                <!--<id>install-daal-jar</id>-->
                                <!--<phase>validate</phase>-->
                                <!--<goals>-->
                                <!--<goal>install-file</goal>-->
                                <!--</goals>-->
                                <!--<configuration>-->
                                <!--<file>${project.basedir}/engine-plugins/daal-plugins/lib/daal-core-${dep.daal.version}.jar</file>-->
                                <!--<groupId>com.intel.daal</groupId>-->
                                <!--<artifactId>daal-core</artifactId>-->
                                <!--<version>${dep.daal.version}</version>-->
                                <!--<packaging>jar</packaging>-->
                                <!--</configuration>-->
                                <!--</execution>-->
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>net.alchim31.maven</groupId>
                        <artifactId>scala-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.scalatest</groupId>
                        <artifactId>scalatest_2.10</artifactId>
                        <version>2.1.6</version>
                        <scope>test</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>

            <dependencies>
                <dependency>
                    <groupId>org.scalatest</groupId>
                    <artifactId>scalatest_2.10</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>

    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.0</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <testResources>
            <testResource>
                <directory>core/src/main/resources</directory>
                <includes>
                    <include>reference.conf</include>
                </includes>
            </testResource>
            <testResource>
                <directory>core/src/test/resources</directory>
            </testResource>
        </testResources>
    </build>

    <dependencyManagement>
    <dependencies>
    <dependency>
        <groupId>org.apache.spark</groupId>
        <artifactId>spark-core_2.10</artifactId>
        <version>2.1.0</version>
    </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.10</artifactId>
            <version>2.1.0</version>
        </dependency>

        <dependency>
            <groupId>org.tensorflow</groupId>
            <artifactId>tensorflow-hadoop</artifactId>
            <version>1.0-01232017-SNAPSHOT</version>
            <classifier>shaded-protobuf</classifier>
        </dependency>
        <dependency>
            <groupId>org.joda</groupId>
            <artifactId>joda-convert</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-yarn-api</artifactId>
            <version>2.7.3</version>
        </dependency>
    </dependencies>
    </dependencyManagement>

</project>